# dlsh

./: .gitignore  CMakeLists.txt  README-TEA-packages.md  README-prebuilt-packages.md  README.md
.github/workflows/: build-dlsh-interp.yml  publish_release.yml  release.yml  release_installers_linux.yml  release_installers_macos.yml  release_linux.yml  release_macos.yml
cmake/: EmbedTcl.cmake  dlsh_bundle_appzip.cmake
gui/src/: dlfuncs.h
lib/: dgview.tcl  dlbasic.tcl
libdg/: CMakeLists.txt
libdg/test/: CMakeLists.txt
libdg/test/src/: dgtojson.c  dgz_roundtrip.c  testdgread.c
linux/: build-dlsh-deb.sh
macos/: build-dlsh-pkg.sh
pkgs/: CMakeLists.txt
pkgs/collision/: CMakeLists.txt
pkgs/collision/src/: collision_extract.cpp  collision_extract.h  tcl_collision.cpp
pkgs/dgarrow/: CMakeLists.txt  dgarrow.cpp  dgarrow.h
pkgs/dgarrow/test/: nested.arrow  testnested.tcl
pkgs/dslog/: tcl_dslog.c
pkgs/em/: CMakeLists.txt  README.md  em.c
pkgs/impro/: cimg_funcs.cpp  cimg_funcs.h  tcl_impro.c
pkgs/points/: points.c
pkgs/postgres/: CMakeLists.txt
pkgs/qpcs/: qpcs.tcl
pkgs/qtcgwin/: CMakeLists.txt  qtcgwin_tcl.cpp
pkgs/spritesheet/: CMakeLists.txt  README.md
pkgs/spritesheet/src/: spritesheet_extract.cpp  spritesheet_extract.h  tcl_spritesheet.cpp
pkgs/sqlite/: CMakeLists.txt  pkgIndex.tcl.in
pkgs/tclbox2d/: CMakeLists.txt  tclbox2d.c
pkgs/tcljson/: CMakeLists.txt  tcljson.cpp
pkgs/thread/: CMakeLists.txt  pkgIndex.tcl.in
pkgs/tpool/: CMakeLists.txt  README.md  test_tpool.tcl  thread_pool.tcl  tpool.cpp
pkgs/trajectory_analysis/: CMakeLists.txt  LICENSE  README.md  dfu_helpers.h  pkgIndex.tcl.in  trajectory_analysis.c
pkgs/yajltcl/: CMakeLists.txt
src/: base_cg.c  dfana.c  dfana.h  dgarrow.c  dgarrow.cpp  dgarrow.h  dgjson.c  dgmsgpack.c  dgmsgpack.h  dl_comprehension.tcl  dl_sugar.tcl  dlnoise.c  dlsh.def  dlsh_main.c  dlsh_pkg.c  tcl_df.c  tcl_dl.c  tcl_dlg.c
src/lablib/: axes.c  cg_base.c  cg_base_wrapper.h  cg_ps.c  cgraph.c  cgraph.h  color.h  datapoint.h  dfutils.c  dslog.c  dslog.h  dynio.c  gbuf.c  gbuf.h  gbufutl.c  gbufutl.h  lablib64.def  randvars.c  rawapi.c  timer.c  utilc_unix.c
tests/: test_dg_concat.tcl  test_dl_comprehension.tcl  test_dl_foreach.tcl  test_leak_dl_foreach.tcl
vfs/: .gitignore
vfs/lib/Tktable/: pkgIndex.tcl
vfs/lib/box2d/: hello_box2d_tk.tcl  testb2d.tcl  testbox2d_tk.tcl  testjoint_tk.tcl
vfs/lib/colorcal/: README.md  colorcal.tcl  colorcal_stim.tcl  pkgIndex.tcl  test_colorcal.tcl
vfs/lib/curve/: pkgIndex.tcl
vfs/lib/dlsh/: dlsort.tcl
vfs/lib/em/: em.tcl  pkgIndex.tcl
vfs/lib/em/wrappers/: biquadratic.tcl
vfs/lib/ess_test/: README.md  ess_test.tcl  pkgIndex.tcl  test_ess_test.tcl  test_systems.tcl
vfs/lib/grasp/: grasp.tcl  pkgIndex.tcl
vfs/lib/hex/: testhex.tcl
vfs/lib/launch_sim/: README.md  dev.tcl  launch_sim.tcl  pkgIndex.tcl  test_launch_sim.tcl
vfs/lib/mclistbox-1.03/: mclistbox.tcl  pkgIndex.tcl
vfs/lib/mclistbox-1.03/.AppleDouble/: .Parent  ANNOUNCE.txt  CHANGES.txt  README.txt  defs  example.tcl  mclistbox.html  mclistbox.pod  mclistbox.tcl  mclistbox.test  test.tcl
vfs/lib/mp_sim/: README.md  dev.tcl  mp_sim.tcl  pkgIndex.tcl  play_bounce.tcl  play_ensemble.tcl  play_leakage_heatmap.tcl  play_single.tcl  play_sweep.tcl  testmp_sim.tcl
vfs/lib/neuropixel/: DATA_SCHEMA.md  neuropixel.tcl  pkgIndex.tcl
vfs/lib/qpcs/: dialogevtviewer.tcl  onlineviewer.tcl  pkgIndex.tcl  qpcs.tcl
vfs/lib/spritesheet/: pkgIndex.tcl
vfs/lib/sqlite/: pkgIndex.tcl  pkgIndex.tcl~
vfs/lib/sqlite/Darwin/arm64/: libtcl9sqlite3.49.1.dylib
vfs/lib/stimcompose/: compose.tcl
vfs/lib/tablelist7.5/demos/: tileWidgets.tcl
vfs/lib/tablelist7.5/doc/: tablelistTsw.html
vfs/lib/tcljson/: pkgIndex.tcl
vfs/lib/tdom/: pkgIndex.tcl
vfs/lib/tdom/Darwin/arm64/: libtcl9tdom0.9.6.dylib
vfs/lib/thread/: history.txt  pkgIndex.tcl
vfs/lib/thread/Darwin/arm64/: libtcl9thread3.0.2.dylib  libtcl9thread3.0.3.dylib
vfs/lib/tkcon-2.8/: Makefile  config.status  pkgIndex.tcl
vfs/lib/tklib0.8/: pkgIndex.tcl
vfs/lib/tpool/: pkgIndex.tcl
vfs/lib/traj/: demo_conditions.tcl  inverted_pendulum.tcl  pendulum.tcl  pkgIndex.tcl  test_inverted_pendulum.tcl  test_pendulum.tcl  test_traj.tcl  traj.tcl
vfs/lib/trajectory_analysis/: example.tcl  test_module.tcl
vfs/lib/yajltcl/: pkgIndex.tcl  pkgIndex.tcl~
vfs/lib/yajltcl/Darwin/arm64/: libtcl9yajltcl1.8.1.dylib  libyajltcl1.8.1.dylib
